--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
     "analyze": "ANALYZE=true pnpm build",
@@ -42,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@sentry/nextjs": "^10.20.0",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
@@ -110,20 +111,20 @@
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.552.0",
     "mammoth": "^1.10.0",
     "markdown-it": "^14.1.0",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
-    "next": "^15.3.2",
+    "next": "^16.0.1",
     "pdfjs-dist": "^5.4.149",
     "plyr": "^3.7.8",
-    "react": "^19.1.0",
+    "react": "^19.2.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
@@ -154,7 +155,7 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@eslint/eslintrc": "^3.3.1",
-    "@next/bundle-analyzer": "^16.0.0",
+    "@next/bundle-analyzer": "^16.0.1",
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
@@ -166,8 +167,8 @@
     "@types/markdown-it": "^14.1.2",
     "@types/node": "22.15.18",
     "@types/prettier": "^3.0.0",
-    "@types/react": "19.1.4",
-    "@types/react-dom": "19.1.5",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -179,7 +180,7 @@
     "commitizen": "^4.3.1",
     "cz-git": "^1.11.1",
     "eslint": "9.27.0",
-    "eslint-config-next": "^15.3.2",
+    "eslint-config-next": "^16.0.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
