--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "cmdk": "^1.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
     "frappe-gantt": "^1.0.4",
@@ -149,6 +150,7 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extension-export-docx": "^0.0.9",
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
