--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "cmdk": "^1.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "file-saver": "^2.0.5",
     "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
@@ -116,6 +117,7 @@
     "hast-util-to-html": "^9.0.5",
     "html2canvas-pro": "^1.5.13",
     "html2pdf.js": "^0.12.1",
+    "image-meta": "^0.2.2",
     "import-in-the-middle": "^2.0.0",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
@@ -128,6 +130,7 @@
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
     "next": "16.0.10",
+    "ofetch": "^1.5.1",
     "pdfjs-dist": "^5.4.149",
     "plyr": "^3.7.8",
     "react": "^19.2.3",
