--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@tiptap/starter-kit": "^3.0.7",
     "@tiptap/suggestion": "^3.0.7",
     "@types/lodash-es": "^4.17.12",
+    "@zumer/snapdom": "^2.0.1",
     "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
